# AhoTTS_live_chat_demo

./: .gitignore  Dockerfile.my_server  Dockerfile.nextjs  Dockerfile.tts_server  docker-compose.yml
tts/src/: CMakeLists.txt  Makefile  MyServer.cpp  Socket.cpp  Socket.hpp  Socket_Cliente.cpp  a.out  base64.cpp  base64.hpp  openai.hpp
voice-chatbot/: package-lock.json  package.json
voice-chatbot/app/: layout.tsx  page.tsx
voice-chatbot/components/: voice-chatbot-enhanced.tsx  voice-chatbot-openai.tsx  voice-chatbot-realistic.tsx  voice-chatbot-web-speech.tsx  voice-chatbot.tsx
voice-chatbot/hooks/: use-audio-recorder.ts
voice-chatbot/server/: tts-server.js
